--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "paypal/rest-api-sdk-php": "*",
+        "paypal/rest-api-sdk-php": "^1.5",
         "laravelcollective/html": "5.1.*"
     },
     "require-dev": {
